--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,13 +3,17 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Gana Gana App</ion-title>
   </ion-navbar>
 </ion-header>
 
+
 <ion-content padding>
-  <h3>this is the home</h3>
-
-
+    <ion-card>
+        <img src="assets/images/logo2.png"/>
+        <img src="assets/images/bannerganagana.png"/>
+        <img src="assets/images/recargas.jpg"/>
+        <img src="assets/images/todoenunsololugar.jpg"/>
+    </ion-card>
 
 </ion-content>
