--- a/src/pages/kitdelasuerte/kitdelasuerte.html
+++ b/src/pages/kitdelasuerte/kitdelasuerte.html
@@ -1,18 +1,16 @@
-<!--
-  Generated template for the Kitdelasuerte page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>kitdelasuerte</ion-title>
+    <ion-title>Kit de la Suerte</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+      <ion-card>
+      <ion-card-content>
+        Bienvenido al juego del kit de la suerte, empieza a capturar amuletos en nuestros puntos Gana Gana, cuando los completes todos recibiras fabulosos premios
+      </ion-card-content>
+    </ion-card>
 </ion-content>
