--- a/src/pages/resultados/resultados.html
+++ b/src/pages/resultados/resultados.html
@@ -1,18 +1,41 @@
-<!--
-  Generated template for the Resultados page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>resultados</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Gana Gana App</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
+
+  <h3>Resultados</h3>
+
+
+    <button ion-button block type="button" onclick="window.open('http://loteriadeltolima.com/')">
+    LOTERIA DEL TOLIMA
+    </button>
+    <button ion-button block type="button" onclick="window.open('http://www.loteriadecundinamarca.com.co/')">
+    LOTERIA DE CUNDINAMARCA
+    </button>
+    <button ion-button block type="button" onclick="window.open('http://www.loteriadebogota.com/index.php/en/)">
+    LOTERIA DE BOGOTÁ
+    </button>
+    <button ion-button block type="button" onclick="window.open('http://www.loteriaquindio.com.co/resultados')">
+    LOTERIA DEL QUINDIO
+    </button>
+    <button ion-button block type="button" onclick="window.open('http://www.asesoriasantetransito.com')">
+    LOTERIA DEL TOLIMA
+    </button>
+    <button ion-button block type="button" onclick="window.open('http://www.asesoriasantetransito.com')">
+    LOTERIA DEL TOLIMA
+    </button>
+    <button ion-button block type="button" onclick="window.open('http://www.asesoriasantetransito.com')">
+    LOTERIA DEL TOLIMA
+    </button>
+    <button ion-button block type="button" onclick="window.open('http://www.asesoriasantetransito.com')">
+    LOTERIA DEL TOLIMA
+    </button>
 
 </ion-content>
