--- a/src/pages/armaparejas/armaparejas.html
+++ b/src/pages/armaparejas/armaparejas.html
@@ -1,18 +1,13 @@
-<!--
-  Generated template for the Armaparejas page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>armaparejas</ion-title>
+    <ion-title>Arma Parejas</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
-<ion-content padding>
-this is arma parejas
+<ion-content>
+      <button ion-button icon-only  
+           [navPush]="instruccionesPage"> 
+              <ion-icon name="help-circle"></ion-icon>
+      </button>
 </ion-content>
