--- a/src/pages/astrologia/astrologia.html
+++ b/src/pages/astrologia/astrologia.html
@@ -1,18 +1,35 @@
-<!--
-  Generated template for the Astrologia page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>astrologia</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Gana Gana App</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
+  <h3>Astrologia</h3>
 
+        <p>Ingrese sus datos para consultar la suerte de los astros para Ud.</p> 
+
+  <form>           
+    <ion-list>  
+      <ion-item>
+          <ion-input  type="text" name="name" placeholder="Nombre" required ngControl=”username”></ion-input>
+      </ion-item>
+      <ion-item>
+          <ion-input type="date" name="date_of_birth" placeholder="Fecha de nacimiento"></ion-input>
+      </ion-item>
+      <ion-item>
+          <ion-input  type="hour"  name="time" placeholder="Hora de nacimiento"></ion-input>
+      </ion-item>
+      <ion-item>
+          <ion-input  type="text" name="city"  placeholder="Ciudad"></ion-input>
+      </ion-item>
+    </ion-list>
+    <button ion-button block type="button" 
+      [navPush]="astroresultadosPage">Consultar
+    </button>
+  </form>
 </ion-content>
