--- a/src/pages/simuladorgiros/simuladorgiros.html
+++ b/src/pages/simuladorgiros/simuladorgiros.html
@@ -1,18 +1,34 @@
-<!--
-  Generated template for the Simuladorgiros page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>simuladorgiros</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Gana Gana App</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
+  <h2 class='title'>Simulador de Giros</h2>
 
-</ion-content>
+<h4 class='title'>Ingrese el valor a enviar</h4> 
+
+
+<div class='selector'>
+  <select type="number" [(ngModel)]="selectedOption" (ngModelChange)="toCost()">
+      <option *ngFor="let option of options" [ngValue]="option.cost">{{option.range}}</option>
+  </select>
+</div>
+
+
+<div>
+    <ion-card>
+        <ion-row>
+            <ion-col width-100>
+                <h1 class=numero >
+                  {{selectedOption}}
+                </h1>
+            </ion-col>
+        </ion-row>
+    </ion-card>
+</div>
