--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         .catch(err => console.log('Error', err));
     }
   </script>-->
-
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">  
   <link href="build/main.css" rel="stylesheet">
 
 </head>
