adelanto en estilizacion

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,11 +9,25 @@
 
 
 <ion-content padding>
-    <ion-card>
-        <img src="assets/images/logo2.png"/>
+  <img class="logo" src="assets/images/logo2.png"/>
+    <ion-slides speed="2000" autoplay="1000" loop="true">
+      <ion-slide>
         <img src="assets/images/bannerganagana.png"/>
+      </ion-slide>
+      <ion-slide>
         <img src="assets/images/recargas.jpg"/>
+      </ion-slide>
+      <ion-slide>
         <img src="assets/images/todoenunsololugar.jpg"/>
-    </ion-card>
-
-</ion-content>
+      </ion-slide>
+      <ion-slide>
+        <img src="assets/images/1bannertranajre.jpg"/>
+      </ion-slide>
+      <ion-slide>
+        <img src="assets/images/bancobogota.jpg"/>
+      </ion-slide>
+      <ion-slide>
+        <img src="assets/images/yo_quiero_migiroseguro.jpg"/>
+      </ion-slide>
+  </ion-slides>
+ </ion-content>
