--- a/src/pages/numresultados/numresultados.html
+++ b/src/pages/numresultados/numresultados.html
@@ -24,7 +24,7 @@
         <ion-card>
             <ion-row>
                 <ion-col width-100>
-                    <h1 class=numero >
+                    <h1 class=numero maxlength="4">
                      {{numrandom}}
                     </h1>
                 </ion-col>
