personalizacion del nombre

--- a/src/pages/simuladorgiros/simuladorgiros.html
+++ b/src/pages/simuladorgiros/simuladorgiros.html
@@ -11,11 +11,12 @@
 <ion-content padding>
   <h2 class='title'>Simulador de Giros</h2>
 
-<h4 class='title'>Ingrese el valor a enviar</h4> 
+<h4 class='title'>Seleccione el valor a enviar</h4> 
 
 
 <ion-item class='selector'>
   <ion-label>Seleccione el monto</ion-label>
+  <p> </p>
     <ion-select type="number" [(ngModel)]="selectedOption" >
         <ion-option *ngFor="let option of options" [value]="option.cost">{{option.range}}</ion-option>
     </ion-select>
@@ -23,7 +24,6 @@
 
 
 <ion-item>
-    <ion-card>
         <ion-row>
             <ion-col width-100>
                 <h1 class=numero >
@@ -31,5 +31,4 @@
                 </h1>
             </ion-col>
         </ion-row>
-    </ion-card>
 </ion-item>
