--- a/src/pages/astrologia/astrologia.html
+++ b/src/pages/astrologia/astrologia.html
@@ -16,7 +16,7 @@
   <form>           
     <ion-list>  
       <ion-item>
-          <ion-input  type="text" name="name" placeholder="Nombre" required ngControl=”username”></ion-input>
+          <ion-input  type="text" name="name" placeholder="Nombre"></ion-input>
       </ion-item>
       <ion-item>
           <ion-input type="date" name="date_of_birth" placeholder="Fecha de nacimiento"></ion-input>
@@ -28,8 +28,8 @@
           <ion-input  type="text" name="city"  placeholder="Ciudad"></ion-input>
       </ion-item>
     </ion-list>
-    <button ion-button block type="button" 
-      [navPush]="astroresultadosPage">Consultar
+    <button ion-button block type="button" ng-disabled="myForm.$invalid"
+      [navPush]="astroresultadosPage" >Consultar
     </button>
   </form>
 </ion-content>
