--- a/src/pages/astrologia/astrologia.html
+++ b/src/pages/astrologia/astrologia.html
@@ -28,7 +28,7 @@
           <ion-input  type="text" name="city"  placeholder="Ciudad"></ion-input>
       </ion-item>
     </ion-list>
-    <button ion-button block type="button" ng-disabled="myForm.$invalid"
+    <button ion-button block type="button" 
       [navPush]="astroresultadosPage" >Consultar
     </button>
   </form>
