--- a/src/pages/resultados/resultados.html
+++ b/src/pages/resultados/resultados.html
@@ -12,7 +12,12 @@
 
   <h3>Resultados</h3>
 
-
+    <button ion-button block type="button" icon-right
+    onclick="window.open('http://www.ganagana.com.co/index.php/resultados/resultados-loterias-y-sorteos')">
+    <ion-icon name="pulse" ></ion-icon>
+    Resultados
+    </button>
+    <!--
     <button ion-button block type="button" onclick="window.open('http://loteriadeltolima.com/')">
     LOTERIA DEL TOLIMA
     </button>
@@ -36,6 +41,6 @@
     </button>
     <button ion-button block type="button" onclick="window.open('http://www.asesoriasantetransito.com')">
     LOTERIA DEL TOLIMA
-    </button>
+    </button>-->
 
 </ion-content>
