--- a/src/pages/kitdelasuerte/kitdelasuerte.html
+++ b/src/pages/kitdelasuerte/kitdelasuerte.html
@@ -16,6 +16,7 @@
         <ion-button ion-buttom (click)="validarQR()">Escanear Ahora</ion-button>
         <ion-list *ngIf="data">
           <ion-item>data.result</ion-item>
+          hola
         </ion-list>
     </ion-card-content>
   </ion-card>
