--- a/src/pages/astrologia/astrologia.html
+++ b/src/pages/astrologia/astrologia.html
@@ -13,6 +13,27 @@
 
         <p>Ingrese sus datos para consultar la suerte de los astros para Ud.</p> 
 
+    <form [formGroup]="todo" (ngSubmit)="logForm()">
+      <ion-item>
+        <ion-label>Nombre</ion-label>
+        <ion-input type="text" formControlName="name"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>Fecha de nacimiento</ion-label>
+        <ion-datetime displayFormat="MMM DD, YYYY"  formControlName="date_of_birth"></ion-datetime>
+      </ion-item>
+      <ion-item>
+        <ion-label>Hora de nacimiento</ion-label>
+        <ion-datetime displayFormat="h:mm A" pickerFormat="h mm A" formControlName="time"></ion-datetime>
+      </ion-item>
+      <ion-item>
+        <ion-label>Ciudad</ion-label>
+        <ion-input type="text" formControlName="city"></ion-input>
+      </ion-item>
+      <button ion-button type="submit" [disabled]="!todo.valid"  [navPush]="astroresultadosPage">Consultar</button>
+    </form>
+ 
+<!--
   <form>           
     <ion-list>  
       <ion-item>
@@ -31,5 +52,5 @@
     <button ion-button block type="button" 
       [navPush]="astroresultadosPage" >Consultar
     </button>
-  </form>
+  </form>-->
 </ion-content>
