armaParejas: funciona el juego arma parejas

--- a/src/pages/armaparejas/armaparejas.html
+++ b/src/pages/armaparejas/armaparejas.html
@@ -10,4 +10,6 @@
            [navPush]="instruccionesPage"> 
               <ion-icon name="help-circle"></ion-icon>
       </button>
+      <ion-nav [root]="gameRoot" #content swipeBackEnabled="false"></ion-nav>
 </ion-content>
+
