--- a/src/pages/kitdelasuerte/kitdelasuerte.html
+++ b/src/pages/kitdelasuerte/kitdelasuerte.html
@@ -9,9 +9,9 @@
 
 <ion-content padding>
   <ion-card>
-    <ion-header>
+    <ion-card-header>
       Escanea el codigo QR y valida tus puntos
-    </ion-header>
+    </ion-card-header>
     <ion-card-content>
         <button ion-buttom (click)="validarQR()">Escanear Ahora</button>
         <ion-list *ngIf="data">
