armaParejas: edicion de apariencia del juego, creacion e injection de servicio para transacciones del juego.

--- a/src/pages/armaparejasgame/armaparejasgame.html
+++ b/src/pages/armaparejasgame/armaparejasgame.html
@@ -5,9 +5,12 @@
 </ion-header>
 
 <ion-content padding>
-
-      <ion-nav [root]="gameRoot" #content swipeBackEnabled="false"></ion-nav>
-
-
-  
+  <ion-grid>
+    <ion-row>
+      <ion-col width-40><img src="assets/images/logo2.png"  ></ion-col>
+      <ion-col width-10></ion-col>
+      <ion-col width-40><img src="assets/images/bannerganagana.png"  ></ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-nav [root]="gameRoot" #content swipeBackEnabled="false"></ion-nav>
 </ion-content>
