--- a/src/pages/simuladorgiros/simuladorgiros.html
+++ b/src/pages/simuladorgiros/simuladorgiros.html
@@ -9,26 +9,38 @@
 
 
 <ion-content padding>
-  <h2 class='title'>Simulador de Giros</h2>
+  <ion-card>
+    <ion-card-header>
+      <strong>
+      <h1 class='title'>Simulador de Giros</h1>
+      </strong>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item>
+      <h2 class='title'>Seleccione el valor a enviar</h2>
 
-<h4 class='title'>Seleccione el valor a enviar</h4> 
+      </ion-item>
 
 
-<ion-item class='selector'>
-  <ion-label>Seleccione el monto</ion-label>
-  <p> </p>
-    <ion-select type="number" [(ngModel)]="selectedOption" >
-        <ion-option *ngFor="let option of options" [value]="option.cost">{{option.range}}</ion-option>
-    </ion-select>
-</ion-item>
+      <ion-item class='selector'>
+        <ion-label>Seleccione el monto</ion-label>
+        <p> </p>
+        <ion-select type="number" [(ngModel)]="selectedOption">
+          <ion-option *ngFor="let option of options" [value]="option.cost">{{option.range}}</ion-option>
+        </ion-select>
+      </ion-item>
 
-
-<ion-item>
+      <ion-item>
         <ion-row>
-            <ion-col width-100>
-                <h1 class=numero >
-                  {{selectedOption}}
-                </h1>
-            </ion-col>
+          <ion-col width-100>
+            <h1 class=numero>
+              {{selectedOption}}
+            </h1>
+          </ion-col>
+          
         </ion-row>
-</ion-item>
+      </ion-item>
+
+    </ion-card-content>
+
+  </ion-card>
