armaParejas: edicion de imagenes, edicion layout, redirect  ganador. correccion de errores en la terminal. adicion boton menu

--- a/src/pages/armaparejas/armaparejas.html
+++ b/src/pages/armaparejas/armaparejas.html
@@ -5,6 +5,6 @@
 </ion-header>
 
 <ion-tabs>
-  <ion-tab [root]="instruccionesPage" tabTitle="Instrucciones" tabIcon="help"></ion-tab>
+  <ion-tab color="dark" [root]="instruccionesPage" tabTitle="Instrucciones" tabIcon="help"></ion-tab>
   <ion-tab [root]="armaparejagamePage" tabTitle="Jugar" tabIcon="play"></ion-tab>
 </ion-tabs>
