--- a/src/pages/armaparejasgame/armaparejasgame.html
+++ b/src/pages/armaparejasgame/armaparejasgame.html
@@ -7,10 +7,16 @@
 <ion-content padding>
   <ion-grid>
     <ion-row>
-      <ion-col width-40><img src="assets/images/logo2.png"  ></ion-col>
+      <ion-col width-40><img src="assets/images/logo2.png"></ion-col>
       <ion-col width-10></ion-col>
-      <ion-col width-40><img src="assets/images/bannerganagana.png"  ></ion-col>
+      <ion-col width-40><img src="assets/images/bannerganagana.png"></ion-col>
     </ion-row>
   </ion-grid>
-  <ion-nav [root]="gameRoot" #content swipeBackEnabled="false"></ion-nav>
+  <ion-grid>
+    <ion-row>
+      <ion-col width-100>
+        <ion-nav [root]="gameRoot" #content swipeBackEnabled="false"></ion-nav>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
