--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -21,13 +21,13 @@
  
    <span class="error" *ngIf="error">{{ error }}</span>
 
-  <button ion-button block outline (click)="loginFb()" id="fb">Login With Facebook</button><br>
+  <button ion-button block outline (click)="loginFb()" id="fb">Login With Facebook</button>
   <button ion-button block outline (click)="loginGoogle()" id="google">Login With Google</button>
-  <button ion-button block outline routerLink="/login-email" id="email">Email</button>
-  <button ion-button block outline (click)="signInWithFacebook()">Facebook</button>
+  <button ion-button block outline [navPush]="emailComponent" id="email">Email</button>
+ 
+  <a [navPush]="signupComponent" routerLinkActive="active" class="alc">No account? <strong>Create one here</strong></a>
 
-
-  <a routerLink="/signup" routerLinkActive="active" class="alc">No account? <strong>Create one here</strong></a>
+   <button ion-button block outline (click)="signInWithFacebook()">Facebook</button>
 
   
   </form>
