--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -61,7 +61,7 @@
       </button>
         <button ion-button block type="button" 
       [navPush]="numerologiaPage">
-          Numerologia
+          Numerología
         </button>
     </ion-col>
   </ion-row>
@@ -75,7 +75,7 @@
       </button>
         <button ion-button block type="button" 
       [navPush]="astrologiaPage">
-          Astrologia
+          Astrología
         </button>
     </ion-col>
 
