--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -3,29 +3,26 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-grid>
-    <ion-row>
-      <ion-col width-10></ion-col>
-      <ion-col width-80><img src="assets/images/logo2.png"></ion-col>
-    </ion-row>
-    <ion-row>
-      <p>Bienvenido a la app de Gana Gana, ingresa o registrate para empezar a disfrutar todos nuestros beneficios para ti.</p>
-    </ion-row>
-  </ion-grid>
 
+<img src="assets/images/logo2.png">
+
+
+      <p>Bienvenido a la app de Gana Gana</p>
+      <p>Si ya tienes una cuenta,  ingresa aqui para empezar a disfrutar todos nuestros beneficios para ti.</p>
+
+ <button ion-button block (click)="loginAlert()">Ingresar</button> 
+ <br>
+ <p>O, crea una cuenta aqui!!!! solo ingresa tu correo electronico y asigna una contraseña</p>
+ <br>
   <form [formGroup]="register" (ngSubmit)="registerUser()">
-
     <ion-item>
-      <ion-label color="dark" fixed>Correo electronico</ion-label>
-      <ion-input type="email" name="email" [(ngModel)]="newUser.email" formControlName="email" focus></ion-input>
+        <ion-input type="email" name="email" placeholder="Email..." [(ngModel)]="newUser.email" formControlName="email" focus></ion-input>
     </ion-item>
-
     <ion-item>
-      <ion-label color="dark" fixed>Contraseña</ion-label>
-      <ion-input type="password" name="password" [(ngModel)]="newUser.password" formControlName="password"></ion-input>
+      <ion-input type="password" name="password" placeholder="Password" [(ngModel)]="newUser.password" formControlName="password"></ion-input>
     </ion-item>
     
     <button ion-button block type="submit" [disabled]="!register.valid">Crear una cuenta</button>
   </form>
-  <button ion-button block (click)="loginAlert()">Ya tengo una cuenta!</button>
+ 
 </ion-content>
