--- a/src/pages/armaparejas/armaparejas.html
+++ b/src/pages/armaparejas/armaparejas.html
@@ -6,5 +6,5 @@
 
 <ion-tabs>
   <ion-tab color="dark" [root]="instruccionesPage" tabTitle="Instrucciones" tabIcon="help"></ion-tab>
-  <ion-tab [root]="armaparejagamePage" tabTitle="Jugar" tabIcon="play"></ion-tab>
+  <ion-tab color="dark" [root]="armaparejagamePage" tabTitle="Jugar" tabIcon="play"></ion-tab>
 </ion-tabs>
