--- a/src/pages/kitdelasuerte/kitdelasuerte.html
+++ b/src/pages/kitdelasuerte/kitdelasuerte.html
@@ -21,4 +21,17 @@
       </ion-list>
     </ion-card-content>
   </ion-card>
+
+  <!--Impresion de Cards-->
+  <span class="amuletos" *ngFor="let amulet of amulets">
+    <ion-card>
+    <img [ngClass]="amulet.find ? 'azul': 'gris'" src="{{amulet.imgUrl}}" alt="">
+    <ion-card-header>
+      <button ion-button (click)="prueba(amulet)">
+      {{amulet.name}}
+      </button>
+    </ion-card-header>
+    </ion-card>
+    
+  </span>
 </ion-content>
